# bongo-cat-next

.github/workflows/: release.yml
scripts/: i18n-smoke.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: layout.tsx  providers.tsx
src/components/: I18nDebug.tsx
src/hooks/: use-i18n.ts  use-tray.ts  use-window-effects.ts
src/hooks/menu/: _use-menu-builder.ts  _use-menu-factory.ts
src/i18n/: index.ts
src/locales/de-DE/: expressions.json  menu.json  models.json  motions.json  system.json  ui.json  window.json
src/locales/en-US/: system.json
src/locales/zh-CN/: system.json
